recipe 1 fully added

--- a/recipes/browned-butter-cornbread.html
+++ b/recipes/browned-butter-cornbread.html
@@ -10,7 +10,7 @@
     <h1>Browned Butter Cornbread</h1>
 <br>
     <img src="../img/bbcbread.jpeg">
-<br>
+<p></p>
     <h5>Browned butter cornbread baked in a cast iron corn pone pan.</h5>
 <p>Not too sweet, not too savoury, but warm, rich, nutty cornbread goodness. Adapted from Binging with Babish.</p>
 <p><h3>Ingredients</h3></p>
@@ -33,7 +33,8 @@
         <li> Sea Salt</li>
         <li> Honey</li>
     </ul></p>
-    <p><ol>
+    <p><h3>Instructions</h3></p>
+        <p><ol>
 
         <li>In a mixing bowl, combine 5 ounces of finely ground cornmeal and 5 ounces of all-purpose flour. Add ½ a teaspoon of baking powder, ½ a teaspoon of baking soda, 1 teaspoon of kosher salt, and 3 tablespoons of sugar. Whisk together accordingly. </li>
         <li>In a separate mixing bowl, whisk 2 large eggs and 1 ½ cups of buttermilk together. </li>
