halal chicken ingredients added

--- a/recipes/halal-chicken-rice.html
+++ b/recipes/halal-chicken-rice.html
@@ -4,11 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Halal Cart Chicken & Turmeric Rice</title>
 </head>
 <body>
     <h1>Halal Cart Chicken & Turmeric Rice</h1>
     <br>
     <img src="../img/halal-chicken-rice.png">
+    <p></p>
+        <h5>Halal Cart Chicken & Turmeric Rice</h5>
+        <p>Seared and crispy halal-style chicken on a bed of fluffy golden rice, with a tangy white sauce.</p>
+
+        <p><h3>Ingredients</h3></p>
+        <p>
+            <h4>Chicken</h4>
+        </p>
+        <p><ul>
+            <li>1 lb boneless, skinless, chicken thigh (raw) | 544 calories 
+                </li>
+            <li>1 tbsp white vinegar  | 3 calories 
+                </li>
+            <li> 1/2 tbsp dried ground oregano | 9 calories 
+                </li>
+            <li>1/4 tsp ground coriander | 3 calories 
+                </li>
+            <li>1/2 tsp garlic powder | 5 calories 
+                </li>
+            <li>1/2 tsp salt | 0 calories 
+                </li>
+            <li>1/2 tsp ground black pepper | 3 calories 
+                </li>
+            <li>2 tbsp olive oil | 248 calories</li>
+        </ul></p>
+
+        <p>
+            <h4>Rice</h4>
+        </p>
+        <p>
+            <ul>
+                <li>1 tbsp unsalted butter  | 102 calories </li>
+                    <li>1/2 tsp turmeric | 4 calories </li>
+                    <li>1/4 tsp ground cumin | 2 calories </li>
+                    <li>1 cup uncooked rice (I used Kokuho rose) | 640 calories </li>
+                    <li>1/4 tsp salt (or to taste) | 0 calories</li> 
+                    <li>1 1/2 cups chicken broth (homemade or low-sodium or gluten-free) | 129 calories</li>
+            </ul>
+        </p>
+        <p><h4>White Sauce</h4></p>
+        <p><ul>
+            <li>1/4 cup plain whole milk yogurt  | 40 calories </li>
+            <li>1/4 cup mayonnaise | 229 calories </li>
+            <li>1/2 tbsp sugar  | 24 calories </li>
+            <li>1 tbsp white vinegar | 3 calories</li>
+            </ul></p>
 </body>
 </html>
