halal chicken recipe complete

--- a/recipes/halal-chicken-rice.html
+++ b/recipes/halal-chicken-rice.html
@@ -56,5 +56,29 @@
             <li>1/2 tbsp sugar  | 24 calories </li>
             <li>1 tbsp white vinegar | 3 calories</li>
             </ul></p>
+            <p><h3>Instructions</h3></p>
+            <p>
+                <h4>For the chicken:</h4>
+            </p>
+        <p><ol>
+            <li>Pat dry the boneless, skinless chicken thighs, and slice them into small pieces no bigger than 1 inch by 1 inch. </li>
+            <li>In a bowl mix White Vinegar, Dried Oregano, Ground Coriander, Garlic Powder, Salt, Ground Black Pepper, and Olive Oil. Pour mixture over chicken and let marinate in fridge for at least 1 hour. 4 hours is optimal, but overnight is fine as well- no more than 12 hours.</li>
+            <li>In a high quality non-stick pan, pour in 1/2 tbsp olive oil and add in 1/2 lb of chicken. Cook chicken in small batches on high heat to give it a good sear, about 5 minutes each side. Press down with spatula to make them extra crispy.</li>
+        </ol></p>
+        <p>
+            <h4>For the rice:</h4>
+        </p>
+        <p><ol>
+            <li>In a dutch oven or similar pot on medium heat, melt 1 tbsp unsalted butter. Add in turmeric, ground cumin, and salt, and let cook for 1 minute before adding in rice. </li>
+            <li>Mix well for 4 minutes on medium high heat, then add chicken broth and bring to a boil. Cover and reduce heat to a simmer and cook for 15-20 minutes depending on how firm/soft you like your rice. </li>
+            <li>Check the rice after 15 minutes and not before. Test to see if it is done to your liking- if not, add in 2 tbsp of chicken broth and continue cooking.</li>
+            </ol></p>
+        <p>
+            <h4>For the white sauce:</h4>
+        </p>            
+        <ol>
+            <li>Combine the plain yogurt, mayonnaise, sugar, and white vinegar. </li>
+            <li>Mix well and serve over chicken and rice.</li>
+            </ol>
 </body>
 </html>
