boilermaker recipe complete

--- a/recipes/boilermaker-chili.html
+++ b/recipes/boilermaker-chili.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boiler Maker Chili (Halved)</title>
+    <title>Boilermaker Chili - Halved</title>
 </head>
 <body>
-    
+    <h1>Boilermaker Chili - Halved</h1>
+    <br>
+        <img src="../img/boilermaker-chili.jpeg">
+    <p><h5>Ground beef and sausage chili with beans.</h5></p>
+    <p><h3>Ingredients</h3></p>
+    <ul>
+        <li>1 pound ground beef chuck</li>
+        <li>1/2 pound bulk Italian sausage</li>
+        <li>2 cans chili beans, 1 drained, 1 spicy sauce</li>
+        <li>1 (28 ounce) can diced tomatoes with juice</li>
+        <li>1/2 (6 ounce) can tomato paste</li>
+        <li>1/2 large yellow onion, chopped</li>
+        <li>1-1/2 stalks celery, chopped</li>
+        <li>1 bell pepper, seeded and chopped</li>
+        <li>1-1/2 teaspoons bacon bits</li>
+        <li>2 cubes/2 tsp beef bouillon</li>
+        <li>1/4 cup beer/red wine</li>
+        <br>
+        <li>2 tablespoons chili powder</li>
+        <li>1-1/2 teaspoons Worcestershire sauce</li>
+        <li>1-1/2 teaspoons minced garlic</li>
+        <li>1-1/2 teaspoons dried oregano</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>1 teaspoon hot sauce (e.g. Tabasco)</li>
+        <li>1/2 teaspoon dried basil</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/2 teaspoon ground black pepper</li>
+        <li>1/2 teaspoon cayenne pepper</li>
+        <li>1/2 teaspoon paprika</li>
+        <li>1/2 teaspoon white sugar</li>
+        </ul>
+
+        <p>
+            <h3>Instructions</h3>
+        </p>
+        <p><ol>
+            <li>Heat a large stock pot over medium-high heat. Crumble the ground chuck and sausage into the hot pan, and cook until evenly browned. Drain off excess grease.</li>
+            <li>Pour in the chili beans, spicy chili beans, diced tomatoes and tomato paste. 
+                <p>Add the onion, celery, bell peppers, chile peppers, bacon bits, bouillon, and beer.</p> 
+                <p>Season with chili powder, Worcestershire sauce, garlic, oregano, cumin, hot pepper sauce, basil, salt, pepper, cayenne, paprika, and sugar. </p>
+                <p>Stir to blend, then cover and simmer over low heat for at least 2 hours, stirring occasionally.</p></li>
+            <li>After 2 hours, taste, and adjust salt, pepper, and chili powder if necessary. The longer the chili simmers, the better it will taste. Remove from heat and serve, or refrigerate, and serve the next day.</li>
+            </ol></p>
 </body>
 </html>
