index complete and boilermaker updated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
 <br>
-    <a href="recipes/browned-butter-cornbread.html">Browned Butter Cornbread</a>
+    <a href="recipes/browned-butter-cornbread.html">Browned Butter Cornbread</a><br>
+    <a href="recipes/boilermaker-chili.html">Boilermaker Chili</a><br>
+    <a href="recipes/halal-chicken-rice.html">Halal Cart Chicken & Rice</a><br>
 </body>
 </html>
