--- a/recipes/boilermaker-chili.html
+++ b/recipes/boilermaker-chili.html
@@ -44,11 +44,11 @@
         </p>
         <p><ol>
             <li>Heat a large stock pot over medium-high heat. Crumble the ground chuck and sausage into the hot pan, and cook until evenly browned. Drain off excess grease.</li>
-            <li>Pour in the chili beans, spicy chili beans, diced tomatoes and tomato paste. 
-                <p>Add the onion, celery, bell peppers, chile peppers, bacon bits, bouillon, and beer.</p> 
-                <p>Season with chili powder, Worcestershire sauce, garlic, oregano, cumin, hot pepper sauce, basil, salt, pepper, cayenne, paprika, and sugar. </p>
-                <p>Stir to blend, then cover and simmer over low heat for at least 2 hours, stirring occasionally.</p></li>
-            <li>After 2 hours, taste, and adjust salt, pepper, and chili powder if necessary. The longer the chili simmers, the better it will taste. Remove from heat and serve, or refrigerate, and serve the next day.</li>
+            <br><li>Pour in the chili beans, spicy chili beans, diced tomatoes and tomato paste. 
+                <br>Add the onion, celery, bell peppers, chile peppers, bacon bits, bouillon, and beer.
+                <br>Season with chili powder, Worcestershire sauce, garlic, oregano, cumin, hot pepper sauce, basil, salt, pepper, cayenne, paprika, and sugar.
+                <br>Stir to blend, then cover and simmer over low heat for at least 2 hours, stirring occasionally.</li>
+            <br><li>After 2 hours, taste, and adjust salt, pepper, and chili powder if necessary. The longer the chili simmers, the better it will taste. Remove from heat and serve, or refrigerate, and serve the next day.</li>
             </ol></p>
 </body>
 </html>
